--- a/Project/Game/Game.vcxproj.filters
+++ b/Project/Game/Game.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClCompile Include="Physics.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Grid.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Platform.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IntegrationLibrary.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Physics.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Grid.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Platform.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
