--- a/Project/Game/Game.vcxproj
+++ b/Project/Game/Game.vcxproj
@@ -137,10 +137,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Game_Manager.cpp" />
+    <ClCompile Include="IGameState.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Title.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Game_Manager.h" />
+    <ClInclude Include="IGameState.h" />
     <ClInclude Include="IntegrationLibrary.h" />
+    <ClInclude Include="Title.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
