그리드 맵 제작 미완,플레이어 히트박스 구현

--- a/Project/Game/Game.vcxproj
+++ b/Project/Game/Game.vcxproj
@@ -139,11 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GridManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GridManager.h" />
     <ClInclude Include="IntegrationLibrary.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Player.h" />
