그리드 탐색 및 충돌 구현중

--- a/Project/Game/Game.vcxproj.filters
+++ b/Project/Game/Game.vcxproj.filters
@@ -18,13 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Physics.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Grid.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Platform.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Collider.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,13 +32,13 @@
     <ClInclude Include="IntegrationLibrary.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Physics.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Grid.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Platform.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Collider.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
