--- a/Project/Game/Game.vcxproj.filters
+++ b/Project/Game/Game.vcxproj.filters
@@ -18,13 +18,7 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="IGameState.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Title.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Game_Manager.cpp">
+    <ClCompile Include="TitleScreen.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,13 +26,7 @@
     <ClInclude Include="IntegrationLibrary.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="IGameState.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Title.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Game_Manager.h">
+    <ClInclude Include="TitleScreen.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
