--- a/Project/Game/Game.vcxproj.filters
+++ b/Project/Game/Game.vcxproj.filters
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="Player.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -13,11 +16,12 @@
     <ClCompile Include="Platform.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-	<ClCompile Include="Player.cpp" />
-	  <Filter>소스 파일</Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IntegrationLibrary.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Collider.h">
@@ -29,7 +33,13 @@
     <ClInclude Include="Platform.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h" />
-	  <Filter>헤더 파일</Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="헤더 파일">
+      <UniqueIdentifier>{da3bb48a-3493-4d18-b762-72b2ed962810}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일">
+      <UniqueIdentifier>{0cb46ea6-c275-493b-9818-f4a669dc3cfa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
