페이즈 2 시작
게임매니저 생성
각 클래스간 연결 시작
게임 흐름 설계 시작
레벨 디자인 준비중

--- a/Project/Game/Game.vcxproj
+++ b/Project/Game/Game.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Collider.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TitleScreen.cpp" />
@@ -150,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Collider.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="IntegrationLibrary.h" />
     <ClInclude Include="TitleScreen.h" />
